# fahrenheit-vita

./: CMakeLists.txt  README.md
datafiles/: frag.cg  vert.cg
libc_bridge/: nids.yml
loader/: config.h  dialog.h  fios.c  fios.h  fnmatch.c  libc_bridge.h  main.c  main.h  obb_files.c  ogg_patch.c  ogg_patch.h  so_util.c  trophies.c  vorbis_patch.c  vorbis_patch.h
sce_sys/livearea/contents/: template.xml
sce_sys/trophy/FAHR00001_00/: TROPHY.TRP
unpacker/: unobb.c
